# apkext

./: .env  .gitignore  .golangci.yml  .goreleaser.yml  0001-Configure-automatic-pkg.go.dev-publishing.patch  Cargo.toml  Makefile  README.md  build.rs  build.sh  extract.sh  go.mod  go.sum  install.sh  integration_test.go  main.go
.github/workflows/: ci.yml  release.yml
cmd/: main.go
internal/assets/: assets.go
internal/assets/jars/: .gitkeep
internal/assets/tools/: .gitkeep
internal/config/: config.go  config_test.go
internal/mcp/: server.go  server.go.backup
internal/tools/: tools.go
pkg/apk/: builder.go  builder_test.go  extractor.go  extractor_test.go
src/: lib.rs  main.rs
src/apk/: builder.rs  extractor.rs  mod.rs
src/assets/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/mcp/: mod.rs
src/tools/: mod.rs
testdata/: README.md
tests/: integration_tests.rs  performance_tests.rs
tools/download-deps/: main.go
