[package]
name = "apkext"
version = "1.0.38"
edition = "2021"
description = "Modern Rust-based tool for extracting and building APK files with embedded JAR utilities"
authors = ["Dmitry Mikushin <dmitry@kernelgen.org>"]
license = "MIT"
repository = "https://github.com/dmikushin/apkext"
homepage = "https://github.com/dmikushin/apkext"
keywords = ["apk", "android", "reverse-engineering", "decompiler"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
tempfile = "3.8"

# Process execution
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for downloading
reqwest = { version = "0.11", features = ["stream"] }

# Archive handling
zip = "0.6"

# Path utilities
path-absolutize = "3.1"

# Cross-platform paths
dirs = "5.0"

# Directory traversal
walkdir = "2.4"

# Directory embedding
include_dir = "0.7"

# MCP support
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"

[build-dependencies]
# Build script dependencies
reqwest = { version = "0.11", features = ["blocking", "stream"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
zip = "0.6"
anyhow = "1.0"

[profile.release]
# Optimize for size and performance
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "apkext"
path = "src/main.rs"
